<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zhubo.androidlabsnew.WeatherForecastActivity"
    android:orientation="vertical">
<ImageView
    android:id="@+id/weatherImage"
    android:layout_width="200dp"
    android:layout_height="200dp" />
    
<TextView
    android:id="@+id/crtTemp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/crtTemp"/>

<TextView
    android:id="@+id/minTemp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/minTemp"/>

<TextView
    android:id="@+id/maxTemp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/maxTemp"/>

    <TextView
        android:id="@+id/wind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wind"/>

<ProgressBar
    android:id="@+id/progress"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:visibility="invisible"
    style="?android:attr/progressBarStyleHorizontal"/>

</LinearLayout>
